--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-/* fonts */
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Montserrat:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hanuman:wght@100;300;400;700;900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-/*Carousel css for react-slick slick-carousel*/
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
@@ -17,4 +15,7 @@ body,
 	height: 100%;
 	width: 100%;
 	font-family: "DM Sans", sans-serif;
+}
+.carouselIndex {
+	z-index: 400 !important;
 }
