--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body,
 	height: 100%;
 	width: 100%;
 	font-family: "DM Sans", sans-serif;
+	font-display: swap;
 }
 .carouselIndex {
 	z-index: 400 !important;
